--- a/html/index.html
+++ b/html/index.html
@@ -14,34 +14,34 @@
       <img src="../imagenes/logo.jpg" alt="Logo mentecuriosa" style="width:28px; height:28px; object-fit:contain; border-radius:50%; border:2px solid #0d6efd; box-shadow:0 1px 4px rgba(0,0,0,0.08);">
       <span class="fw-bold" style="font-size:1.5rem; line-height:1;">mente<br>curiosa</span>
     </a>
-    <form class="d-flex mx-auto" role="search" style="max-width:350px; width:100%;">
-      <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Buscar" style="min-width:60px;">
-      <button class="btn btn-outline-success" type="submit">🔍</button>
-    </form>
-    <div class="collapse navbar-collapse justify-content-end" id="navbarScroll">
-      <ul class="navbar-nav my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
+    <div class="collapse navbar-collapse" id="navbarScroll">
+      <ul class="navbar-nav ms-3 me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">deporte</a>
+          <a class="nav-link" href="deporte.html">deporte</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
+          <a class="nav-link" href="politica.html">politica</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Link
+            ciudades
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
+            <li><a class="dropdown-item" href="Ciudades.html#medellin">Medellin</a></li>
+            <li><a class="dropdown-item" href="Ciudades.html#cali">Cali</a></li>
+            <li><a class="dropdown-item" href="Ciudades.html#bogota">Bogota</a></li>
+            <li><a class="dropdown-item" href="Ciudades.html#barrancabermeja">Barrancabermeja</a></li>
           </ul>
         </li>
         <li class="nav-item">
-          <a class="nav-link disabled" aria-disabled="true">Link</a>
+          <a class="nav-link" href="Conoceme.html">Conoceme</a>
         </li>
       </ul>
     </div>
+    <form class="d-flex" role="search" style="max-width:350px; width:100%;">
+      <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Buscar" style="min-width:60px;">
+      <button class="btn btn-outline-success" type="submit">🔍</button>
+    </form>
   </div>
 </nav>
 
