--- a/html/Conoceme.html
+++ b/html/Conoceme.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>mentecuriosa</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <title>mentecuriosa - Conóceme</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
@@ -34,7 +34,7 @@
           </ul>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="Conoceme.html">Conoceme</a>
+          <a class="nav-link active" aria-current="page" href="Conoceme.html">Conoceme</a>
         </li>
       </ul>
     </div>
@@ -44,6 +44,11 @@
     </form>
   </div>
 </nav>
+
+<div class="container mt-5">
+  <h1>Conóceme</h1>
+  <p>Aquí puedes agregar información sobre ti o sobre el proyecto "mente curiosa".</p>
+</div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
 
