--- a/html/Barrancabermeja.html
+++ b/html/Barrancabermeja.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>mentecuriosa</title>
+    <title>Barrancabermeja - mentecuriosa</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
 </head>
@@ -27,10 +27,10 @@
             ciudades
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="Ciudades.html#medellin">Medellin</a></li>
-            <li><a class="dropdown-item" href="Ciudades.html#cali">Cali</a></li>
-            <li><a class="dropdown-item" href="Ciudades.html#bogota">Bogota</a></li>
-            <li><a class="dropdown-item" href="Ciudades.html#barrancabermeja">Barrancabermeja</a></li>
+            <li><a class="dropdown-item" href="Medellin.html">Medellin</a></li>
+            <li><a class="dropdown-item" href="cali.html">Cali</a></li>
+            <li><a class="dropdown-item" href="bogota.html">Bogota</a></li>
+            <li><a class="dropdown-item active" aria-current="page" href="Barrancabermeja.html">Barrancabermeja</a></li>
           </ul>
         </li>
         <li class="nav-item">
@@ -40,6 +40,11 @@
     </div>
   </div>
 </nav>
+
+<div class="container mt-5">
+  <h1>Barrancabermeja</h1>
+  <p>Bienvenido a la página de Barrancabermeja. Aquí puedes agregar información, imágenes y datos relevantes sobre la ciudad.</p>
+</div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
 
